--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -10,6 +10,7 @@
     line-height: 1.33;
     letter-spacing: 0.09em;
     text-transform: uppercase;
+    color: var(--secondary-text-color-theme-light);
     cursor: pointer;
     transition: color 250ms linear, background-color 250ms linear;
 }
