--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@ button {
   line-height: 1.33;
   letter-spacing: 0.09em;
   text-transform: uppercase;
+  color: var(--secondary-text-color-theme-light);
   cursor: pointer;
   transition: color 250ms linear, background-color 250ms linear;
 }
