--- a/css/main.css
+++ b/css/main.css
@@ -289,18 +289,30 @@ button {
     margin-left: auto;
     background-color: transparent;
   }
+  .mobile-menu-btn__icon {
+    fill: #ffffff;
+  }
+  .mobile-menu-btn__icon:hover,
+  .mobile-menu-btn__icon:focus {
+    fill: var(--accent-color);
+  }
   .mobile-menu__container {
     position: relative;
+    display: flex;
+    flex-direction: column;
     padding-top: 118px;
     padding-left: 50px;
-    max-width: 337px;
+    padding: 70px 50px;
+    height: 100%;
+    max-height: 796px;
     width: 95vw;
-    height: 796px;
+    max-width: 337px;
   }
   .mobile-menu {
     position: absolute;
     top: 0;
     right: 0;
+    height: 100vh;
     overflow: auto;
     background: #ffffff;
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08), -1px 0px 3px rgba(0, 0, 0, 0.16);
@@ -373,6 +385,7 @@ button {
   }
   .mobile-social-list {
     position: relative;
+    margin-top: auto;
   }
   .mobile-social-list::before {
     content: "";
@@ -402,13 +415,6 @@ button {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-  }
-}
-@media screen and (min-width: 320px) {
-  .mobile-menu__container {
-    padding: 50px;
-    height: 100%;
-    max-height: 796px;
   }
 }
 @media screen and (min-width: 768px) {
