--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -33,13 +33,28 @@
     background-color: transparent;
   }
 
+  .mobile-menu-btn__icon{
+    fill: #ffffff;
+  }
+
+  .mobile-menu-btn__icon:hover,
+  .mobile-menu-btn__icon:focus{
+fill: var(--accent-color);
+  }
+
   .mobile-menu__container {
     position: relative;
+    display: flex;
+    flex-direction: column;
     padding-top: 118px;
     padding-left: 50px;
-    max-width: 337px;
+    padding: 70px 50px;
+    height: 100%;
+    max-height: 796px;
     width: 95vw;
-    height: 796px;
+    max-width: 337px;
+   
+  
   }
 
   .mobile-menu {
@@ -47,7 +62,7 @@
     top: 0;
     right: 0;
 
-    // height: 100vh;
+     height: 100vh;
     overflow: auto;
     background: #ffffff;
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04),
@@ -137,6 +152,7 @@
 
   .mobile-social-list {
     position: relative;
+    margin-top: auto;
   }
 
   .mobile-social-list::before {
@@ -178,13 +194,6 @@
   }
 }
 
-@media screen and (min-width: 320px) {
-  .mobile-menu__container {
-    padding: 50px;
-    height: 100%;
-    max-height: 796px;
-  }
-}
 
 @media screen and (min-width: 768px) {
   .header {
