--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -129,7 +129,7 @@ fill: var(--accent-color);
   }
   .mobile-modal-btn {
     display: inline-block;
-    min-width: 188px;
+    width: 188px;
     padding: 12px 30px;
     border: 1px solid var(--accent-color);
     border-radius: 25px;
