--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -9,6 +9,7 @@
   font-size: 11px;
   line-height: 1.36;
   text-align: center;
+  color: var(--secondary-text-color-theme-light);
 }
 
 .advantage-span {
@@ -27,39 +28,38 @@
   line-height: 1.38;
 }
 
-@media screen and (min-width: 300px) {
-  .advantages-container {
-    padding-top: 84px;
-    padding-bottom: 84px;
-  }
+// @media screen and (min-width: 300px) {
+//   .advantages-container {
+//     padding-top: 84px;
+//     padding-bottom: 84px;
+//   }
 
-  .advantages-item {
-    margin-bottom: 30px;
-    width: 193px;
-    height: 133px;
-  }
-  .advantages-item:nth-child(2n + 1) {
-    margin-right: auto;
-  }
+//   .advantages-item {
+//     margin-bottom: 30px;
+//     width: 193px;
+//     height: 133px;
+//   }
+//   .advantages-item:nth-child(2n + 1) {
+//     margin-right: auto;
+//   }
 
-  .advantages-item:nth-child(2n) {
-    margin-left: auto;
-  }
-}
+//   .advantages-item:nth-child(2n) {
+//     margin-left: auto;
+//   }
+// }
 
-@media screen and (min-width: 426px) {
-  .advantages-item {
-    margin-bottom: 0;
-    width: 183px;
-  }
-
+@media screen and (min-width: 320px) {
   .advantages-list {
     margin-top: 44px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
   }
-
+  .advantages-item {
+    margin-bottom: 30px;
+    width: 130px;
+    height: 133px;
+  }
   .advantages-item:nth-child(2n + 1) {
     margin-bottom: 30px;
     margin-right: 30px;
@@ -67,6 +67,13 @@
 
   .advantages-item:nth-child(2n) {
     margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 426px) {
+  .advantages-item {
+    // margin-bottom: 0;
+    width: 183px;
   }
 }
 
