--- a/css/main.css
+++ b/css/main.css
@@ -724,6 +724,11 @@ button {
   line-height: 1.38;
 }
 
+.advantages-container {
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
+
 @media screen and (min-width: 320px) {
   .advantages-list {
     margin-top: 44px;
@@ -938,6 +943,10 @@ button {
   background-color: #191c26;
 }
 
+.contacts-form-wraper {
+  width: 95%;
+}
+
 .contacts-input:first-child {
   margin-right: 20px;
 }
@@ -957,7 +966,7 @@ button {
   background-color: transparent;
   border-bottom: 1px solid rgba(157, 164, 189, 0.4);
   color: #ffffff;
-  width: 100%;
+  width: 95%;
   height: 76px;
   margin-bottom: 44px;
 }
