--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -28,6 +28,10 @@
   line-height: 1.38;
 }
 
+  .advantages-container {
+    padding-top: 84px;
+    padding-bottom: 84px;
+  }
 // @media screen and (min-width: 300px) {
 //   .advantages-container {
 //     padding-top: 84px;
