--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -2,6 +2,10 @@
   background-color: #191c26;
 }
 
+.contacts-form-wraper{
+  width: 95%;
+}
+
 .contacts-input:first-child {
   margin-right: 20px;
 }
@@ -21,7 +25,7 @@
   background-color: transparent;
   border-bottom: 1px solid rgba(157, 164, 189, 0.4);
   color: #ffffff;
-  width: 100%;
+  width: 95%;
   height: 76px;
   margin-bottom: 44px;
 }
